@@ -29,6 +29,33 @@ my $builder = Test::Run::Builder->new(
     add_to_cleanup      => [ 'Module-Format-*' ],
     create_makefile_pl => 'traditional',
     script_files => ["script/perlmf"],
+    meta_merge =>
+    {
+        resources =>
+        {
+            repository => "http://bitbucket.org/shlomif/web-cpan",
+            homepage => "http://www.shlomifish.org/open-source/projects/Module-Format/",
+        },
+        keywords =>
+        [
+            "modules",
+            "formats",
+            "cpan",
+            "installation",
+            "rpm",
+            "debs",
+            "debian",
+            "mandriva",
+            "fedora",
+            "install",
+            "convert",
+            "apt-get",
+            "urpmi",
+            "yum",
+            "conversion",
+            "perl",
+        ],
+    },
 );
 
 $builder->create_build_script();
